src/main/java/com/example/crud/error/exception/StudentNotFoundException.java
package com.example.crud.error.exception;public class StudentNotFoundException {
}
